# nehir-excel-projects

./: .gitignore
project1/: finding_city_2023.py  main_2018.py  main_2018_all_nav.py  main_2020.py  main_2020_all_nav.py  main_2023.py  pyproject.toml  trial.py
project1/data/: Startups Flanders 2018.xlsx  Startups Flanders 2020.xlsx  Startups Flanders 2023- new.xlsx  Startups Flanders 2023.xlsx
project1/output/: city_statistics.xlsx
project1/output/2018/: Startups Flanders 2018 Arda.xlsx
project1/output/2020/: Startups Flanders 2020 Arda.xlsx
project1/output/2023/: Sheet1_Highlighted.xlsx  Startups Flanders 2023 Arda.xlsx  To Be Added To 2023.xlsx
project1/project1/: utils.py
